# DBZ-rust

./: docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: error.rs  jobs.rs  main.rs
backend/src/db/: mod.rs  practice.rs  tenant.rs  user.rs
backend/src/handlers/: mod.rs  practice.rs  user.rs
backend/src/models/: mod.rs  practice.rs  tenant.rs  user.rs
backend/src/requests/: mod.rs  practice.rs  user.rs
backend/src/responses/: mod.rs  practice.rs
backend/src/routers/: mod.rs  practice.rs  user.rs
