[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.39", features = ["serde"] }
mongodb = "3.1.1"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.13.0", features = ["tracing-subscriber"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.3.0", features = ["chrono"] }
